temp/CACommunity-Salesforce/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Standard_Audit_Statement_Dt__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY. MM.DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999.07.09&quot;</description>
        <formula>IF ( NOT ISBLANK(Standard_Audit_Statement_Date__c),  

TEXT(YEAR(Standard_Audit_Statement_Date__c)) &amp; &quot;.&quot; &amp;

IF (LEN(TEXT(MONTH(Standard_Audit_Statement_Date__c))) = 1,&quot;0&quot; &amp; TEXT(MONTH(Standard_Audit_Statement_Date__c)),TEXT(MONTH(Standard_Audit_Statement_Date__c))) 
&amp; &quot;.&quot; &amp;

IF (LEN(TEXT(DAY(Standard_Audit_Statement_Date__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Standard_Audit_Statement_Date__c)),TEXT(DAY(Standard_Audit_Statement_Date__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Audit Statement Dt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Type__c</fullName>
        <label>Standard Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ETSI TS 101 456</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Trust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Audit__c</fullName>
        <description>URL to public attestation of conformance to the stated certificate verification requirements by a competent independent party</description>
        <inlineHelpText>URL to public attestation of conformance to the stated certificate verification requirements by a competent independent party</inlineHelpText>
        <label>Standard Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_In_Text__c</fullName>
        <description>Status picklist value is converted to text here. Used by reports.</description>
        <label>Status (In Text)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided by CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technically_Constrained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technically Constrained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trust_Bits_Alert__c</fullName>
        <description>Road Work icon -  Trust Bits includes Websites &amp; Standard Audit Type is &apos;ETSI TS 101 456&apos;  
Road Work icon  - Trust Bits includes Websites &amp; BR Audit is blank/NONE!</description>
        <formula>IF (INCLUDES(Trust_Bits__c, &quot;Websites&quot;), 
IF (OR (ISPICKVAL(Standard_Audit_Type__c, &quot;ETSI TS 101 456&quot;), 
ISBLANK(BR_Audit__c), 
CONTAINS(&apos;NONE!&apos;,BR_Audit__c )), 
IMAGE(&quot;/resource/Road_Work&quot;, &quot;Road Work&quot;),&quot;&quot; 
), &quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trust Bits Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trust_Bits__c</fullName>
        <label>Trust Bits</label>
        <picklist>
            <picklistValues>
                <fullName>All Trust Bits Turned Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>URL_to_Test_Website_or_Example_Cert__c</fullName>
        <label>URL to Test Website or Example Cert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Valid_From_GMT__c</fullName>
        <inlineHelpText>The date from which the root CA certificate is valid.</inlineHelpText>
        <label>Valid From (GMT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_From_YYYY_MMM_DD__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY MMM DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999 Jul 09&quot;</description>
        <formula>IF ( NOT ISBLANK(Valid_From_GMT__c), 

TEXT(YEAR(Valid_From_GMT__c)) &amp; &quot; &quot; &amp;

CASE(MONTH(Valid_From_GMT__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
NULL) &amp; &quot; &quot; &amp;
 
IF (LEN(TEXT(DAY(Valid_From_GMT__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Valid_From_GMT__c)),TEXT(DAY(Valid_From_GMT__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From [GMT]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_To_GMT__c</fullName>
        <inlineHelpText>The date until which the root CA certificate is valid.</inlineHelpText>
        <label>Valid To (GMT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_YYYY_MMM_DD__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY MMM DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999 Jul 09&quot;</description>
        <formula>IF ( NOT ISBLANK(Valid_To_GMT__c),

TEXT(YEAR(Valid_To_GMT__c)) &amp; &quot; &quot; &amp;

CASE(MONTH(Valid_To_GMT__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
NULL) &amp; &quot; &quot; &amp;

IF (LEN(TEXT(DAY(Valid_To_GMT__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Valid_To_GMT__c)),TEXT(DAY(Valid_To_GMT__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid To [GMT]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_509_Certificate_PEM__c</fullName>
        <label>X.509 Certificate (PEM)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Certificate_Issuer_Organization__c</columns>
        <columns>Certificate_Issuer_Organizational_Unit__c</columns>
        <columns>Valid_From_GMT__c</columns>
        <columns>Valid_To_GMT__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All CA Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Included_CA_Owners</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CA_Owner_Certificate_No__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Website__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>CA_Email_Alias_1__c</columns>
        <columns>CA_Email_Alias_2__c</columns>
        <columns>Organizational_Type__c</columns>
        <columns>Geographic_Focus__c</columns>
        <columns>Comments_by_Mozilla_on_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CA_Owner</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Change Requested,Included</value>
        </filters>
        <label>All Included CA Owners</label>
    </listViews>
    <listViews>
        <fullName>All_Intermediate_Certificates</fullName>
        <columns>CA_Owner__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Certificate_Issuer_Organization__c</columns>
        <columns>Certificate_Issuer_Organizational_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Trust_Bits__c</columns>
        <columns>Valid_From_GMT__c</columns>
        <columns>Valid_To_GMT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Intermediate_Certificate</value>
        </filters>
        <label>All Intermediate Certificates</label>
    </listViews>
    <listViews>
        <fullName>All_Root_Certificates</fullName>
        <columns>CA_Owner_Certificate_No__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Certificate_Issuer_Organization__c</columns>
        <columns>Certificate_Issuer_Organizational_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Trust_Bits__c</columns>
        <columns>Valid_From_GMT__c</columns>
        <columns>Valid_To_GMT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Root_Certificate</value>
        </filters>
        <label>All Root Certificates</label>
    </listViews>
    <listViews>
        <fullName>Community_Users_CA_Owners_Certificates</fullName>
        <columns>CA_Owner__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Certificate_Issuer_Organization__c</columns>
        <columns>Certificate_Issuer_Organizational_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Trust_Bits__c</columns>
        <columns>Valid_From_GMT__c</columns>
        <columns>Valid_To_GMT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Match_Running_User_s_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Community User&apos;s CA Owners/Certificates</label>
    </listViews>
    <listViews>
        <fullName>Community_Users_Runing_Users_Intermediate_Certs</fullName>
        <columns>CA_Owner__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Certificate_Issuer_Organization__c</columns>
        <columns>Certificate_Issuer_Organizational_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Trust_Bits__c</columns>
        <columns>Valid_From_GMT__c</columns>
        <columns>Valid_To_GMT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Intermediate_Certificate</value>
        </filters>
        <filters>
            <field>Match_Running_User_s_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Community User&apos;s Intermediate Certs</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>CA_Owner</fullName>
        <active>true</active>
        <description>Creation of new CA Qwner</description>
        <label>CA Owner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intermediate_Certificate</fullName>
        <active>true</active>
        <description>Creation of the Intermediate Certificate</description>
        <label>Intermediate Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Root_Certificate</fullName>
        <active>true</active>
        <description>Creation of the Root Certificate</description>
        <label>Root Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subordinate_Certificate</fullName>
        <active>true</active>
        <description>Creation of the Subordinate Certificate</description>
        <label>Subordinate Certificate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_All_SSL_Trust_Bit_Turned_Off</fullName>
        <active>true</active>
        <description>Check to see &quot;All SSL Trust Bit Turned Off&quot; is selected as the only option from the multi picklist</description>
        <errorConditionFormula>(INCLUDES (Trust_Bits__c, &quot;All SSL Trust Bit Turned Off&quot;)) &amp;&amp; 
((INCLUDES (Trust_Bits__c, &quot;Code Signing&quot;)) ||
(INCLUDES (Trust_Bits__c, &quot;Email (S/MIME)&quot;)) ||
(INCLUDES (Trust_Bits__c, &quot;Websites (SSL/TLS)&quot;)) ||
(INCLUDES (Trust_Bits__c, &quot;Code&quot;)) ||
(INCLUDES (Trust_Bits__c, &quot;Email&quot;)) ||
(INCLUDES (Trust_Bits__c, &quot;Websites&quot;)))</errorConditionFormula>
        <errorDisplayField>Trust_Bits__c</errorDisplayField>
        <errorMessage>Cannot select another option with &quot;All SSL Trust Bit Turned Off&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Audits_Same_as_Parent</fullName>
        <active>true</active>
        <description>if  &apos;Audits Sames as Parent&apos; field is checked, all the related fields should be blank</description>
        <errorConditionFormula>AND(Audits_Same_as_Parent__c  = TRUE, 
    OR (Standard_Audit__c &lt;&gt; NULL,
        BR_Audit__c &lt;&gt; NULL,
        EV_Audit__c &lt;&gt; NULL,
        NOT (ISPICKVAL(Standard_Audit_Type__c, &quot;&quot;)),
        NOT (ISPICKVAL(BR_Audit_Type__c, &quot;&quot;)),
        NOT (ISPICKVAL(EV_Audit_Type__c, &quot;&quot;)),
        NOT(ISNULL(Standard_Audit_Statement_Date__c)),
        NOT(ISNULL(BR_Audit_Statement_Date__c)),
        NOT(ISNULL(EV_Audit_Statement_Date__c)),
        Auditor__c &lt;&gt; NULL,
        Auditor_Website__c &lt;&gt; NULL, 
        Auditor_Qualifications__c &lt;&gt; NULL   
       )   
    )</errorConditionFormula>
        <errorDisplayField>Audits_Same_as_Parent__c</errorDisplayField>
        <errorMessage>&apos;Audits Same as Parent&apos; is checked. Please uncheck this field or clear rest of the Audit Info fields to save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_CP_CPS_Same_as_Parent</fullName>
        <active>true</active>
        <description>if  &apos;CP/CPS Sames as Parent&apos; field is checked, all the related fields should be blank</description>
        <errorConditionFormula>AND(CP_CPS_Same_as_Parent__c  = TRUE, 
     OR( Policy_Documentation__c  &lt;&gt; NULL,
         CA_Document_Repository__c  &lt;&gt; NULL, 
         Certificate_Policy_CP__c  &lt;&gt; NULL,
         Certification_Practice_Statement_CPS__c  &lt;&gt; NULL
       )
    )</errorConditionFormula>
        <errorDisplayField>CP_CPS_Same_as_Parent__c</errorDisplayField>
        <errorMessage>&apos;CP/CPS Same as Parent&apos; is checked. Please uncheck this field or clear rest of the Policies and Practices Information fields to save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_PEM_Derived_Fields</fullName>
        <active>true</active>
        <description>If PEM info is provided, do not allow derived fields to be modified.</description>
        <errorConditionFormula>AND (AND (NOT(ISBLANK (X_509_Certificate_PEM__c)), NOT (ISCHANGED(X_509_Certificate_PEM__c))), 
OR (ISCHANGED(Certificate_Issuer_Common_Name__c), 
ISCHANGED(Certificate_Issuer_Organizational_Unit__c), 
ISCHANGED(Certificate_Issuer_Organization__c), 
ISCHANGED(Certificate_Subject_Common_Name__c), 
ISCHANGED(Certificate_Subject_Organization_Unit__c), 
ISCHANGED(Certificate_Subject_Organization__c), 
ISCHANGED(SHA_1_Fingerprint__c), 
ISCHANGED(SHA_256_Fingerprint__c), 
ISCHANGED(Valid_From_GMT__c), 
ISCHANGED(Valid_To_GMT__c), 
ISCHANGED(Certificate_Serial_Number__c), 
ISCHANGED(Basic_Constraints__c), 
ISCHANGED(Key_Usage__c), 
ISCHANGED(Extended_Key_Usage__c), 
ISCHANGED(OCSP_URL_s__c), 
ISCHANGED(CRL_URL_s__c), 
ISCHANGED(Signature_Algorithm__c), 
ISCHANGED(Signing_Key_Parameters__c), 
ISCHANGED(Technically_Constrained__c) 
))</errorConditionFormula>
        <errorMessage>Do not edit fields derived from PEM information. Hit &apos;Cancel&apos; to undo the changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Status_cannot_be_Verified_by_CA</fullName>
        <active>true</active>
        <description>A community user cannot choose &apos;Verified&apos; status</description>
        <errorConditionFormula>AND ( $Profile.Name = &apos;Customer Community Plus User - CAs&apos;, 
      ISPICKVAL (Status__c, &apos;Verified&apos;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>&apos;Verified&apos; status cannot be chosen by a CA</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_SHA_1_Fingerprint_not_Null</fullName>
        <active>true</active>
        <description>Check for SHA-1 Fingerprint to be not null when Type=Root</description>
        <errorConditionFormula>AND ( ISPICKVAL(Type, &apos;Root&apos;), ISBLANK(SHA_1_Fingerprint__c))</errorConditionFormula>
        <errorDisplayField>SHA_1_Fingerprint__c</errorDisplayField>
        <errorMessage>Fill in SHA-1 Fingerprint to save Root Certificate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_Firefox_Release_when_Root_Removed</fullName>
        <active>true</active>
        <description>&apos;Firefox Release When Removed&apos; must be filled in when the root certificate status is &apos;Removed&apos;</description>
        <errorConditionFormula>AND (RecordType.Name = &apos;Root Certificate&apos;, 
ISPICKVAL(Status__c, &apos;Removed&apos;), 
ISBLANK (Firefox_Release_When_Removed__c))</errorConditionFormula>
        <errorDisplayField>Firefox_Release_When_Removed__c</errorDisplayField>
        <errorMessage>&apos;Firefox Release When Removed&apos; must be filled in when the root certificate status is &apos;Removed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_NSS_Release_when_Root_Cert_Removed</fullName>
        <active>true</active>
        <description>&apos;NSS Release When Removed&apos; must be filled in when the root certificate Status is Removed</description>
        <errorConditionFormula>AND (RecordType.Name = &apos;Root Certificate&apos;, 
ISPICKVAL(Status__c, &apos;Removed&apos;), 
ISBLANK (NSS_Release_When_Removed__c))</errorConditionFormula>
        <errorDisplayField>NSS_Release_When_Removed__c</errorDisplayField>
        <errorMessage>&apos;NSS Release When Removed&apos; must be filled in when the root certificate status is &apos;Removed&apos;</errorMessage>
    </validationRules>
</CustomObject>